--- a/12.Pokedex/styles.css
+++ b/12.Pokedex/styles.css
@@ -94,3 +94,53 @@ header img {
 .more:hover{
   color: #ffcb05;
 }
+
+#contenedor-carga {
+  background-color: rgb(110, 0, 0);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0%;
+  z-index: 2;
+  -webkit-transition: all 3s ease;
+  transition: all 3s ease;
+}
+ 
+#carga {
+  border: 10px solid rgb(255, 255, 255);
+  border-top-color: #ff0000;
+  border-top-style: dashed;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  -webkit-animation: girar 1.5s linear infinite;
+  animation: girar 1.5s linear infinite;
+}
+ 
+@-webkit-keyframes girar {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+ 
+@keyframes girar {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
